# cf-rust-test

./: Cargo.toml  wrangler.toml
src/: lib.rs
