[package]
name = "worker-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
worker = "0.0.11"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
